Numbered lines + minor fixes

--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,7 @@
 % It will ignore everything until the endignore pair, and so on.
 % We need to get down to 4500 words in the main text.
 
-% \linenumbers % Comment to suppress line numbers
+\linenumbers % Comment to suppress line numbers
 
 % title goes here:
 %\twocolumn[
@@ -117,7 +117,7 @@ It may seem puzzling that the brain would use several conflicting approaches to 
 
 In this study, we use high-speed calcium imaging and functional connectivity reconstruction to search for looming detectors within recurrent networks in the developing tectum of \textit{Xenopus} tadpoles. Tadpole tectum is uniquely suitable for studies of sensory integration, as it is excessively plastic \citep{pratt2007intrinsic, busch2019}, strongly interconnected \citep{james2015}, and develops reliable looming selectivity within about a week \citep{dong2009, khakhalin2014}, as tadpoles mature from Nieuwkoop stage 45 to stage 49. We hypothesize that looming detectors may emerge in development, when connections between tectal cells are reshaped by patterned visual stimulation. Synapses in the tectum of young tadpoles exhibit spike-time-dependent plasticity (STDP; \citealt{zhang1998stdp, mu2006stdp, vislay2006rf, richards2010stdp}) that is expected to promote the development of so-called synfire chains: groups of neurons, sequentially connected to one another \citep{fiete2010chains, zheng2014synfire}. Synfire chains are selective for inputs that activate neurons in the same sequence in which they are connected \citep{clopath2010stdpcoding}, turning them into temporal pattern detectors. We hypothesize that it is this ability to "resonate" with specific temporally patterned inputs that underlies looming behavior in late pre-metamorphic tadpoles. 
 
-There are two potential ways to test this hypothesis. First, we can look for synfire chains in the tectum; see whether they get selectively activated in response to looming stimuli, and check whether their connectivity and selectivity patterns change with development. Luckily, signal transmission in \textit{Xenopus} tectal neurons is relatively slow, with synaptic transmission and spiking initiation taking up to 10 ms \citep{ciarleglio2015, jang2016, busch2019}, so if synfire chains in the tectum exist, they may be directly observable with fast calcium imaging, operating at rates of $\sim$100 frames/s. Second, if synfire chains can serve as a basis for looming detection, we can expect looming selectivity to spontaneously emerge in a model of a developing tectum governed by spike-time-dependent plasticity \citep{gao2015simplicity, pietri2017emergence}. We can then use this model to explore the range of developmental rules that enable looming selectivity \citep{linderman2017constrain, bassett2018models}, similar to recent advances in modeling the development of visual receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}. 
+There are two potential ways to test this hypothesis. First, we can look for synfire chains in the tectum; see whether they get selectively activated in response to looming stimuli, and check whether their connectivity and selectivity patterns change with development. Luckily, signal transmission in \textit{Xenopus} tectal neurons is relatively slow, with synaptic transmission and spiking initiation taking up to 10 ms \citep{ciarleglio2015, jang2016, busch2019}, so if synfire chains in the tectum exist, they may be directly observable with fast calcium imaging, operating at rates of $\sim$100 frames/s. Second, if synfire chains can serve as a basis for looming detection, we can expect looming selectivity to spontaneously emerge in a model of a developing tectum governed by spike-time-dependent plasticity \citep{gao2015simplicity, pietri2017emergence}. We can then use this model to explore the range of developmental rules that enable looming selectivity \citep{linderman2017constrain, bassett2018models}, similar to how it was recently done for the development of visual receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}. 
 
 With this in mind, we ask three specific questions. First, we test whether it is possible to reconstruct functional connectivity in tectal networks from calcium imaging recordings. Then we investigate the topology of reconstructed connectivity graphs, and compare these graphs between younger and older tadpoles. Finally, we check whether looming detection emerges in a computational model, and whether the statistics of simulated networks matches that of biological networks.
 
@@ -164,21 +164,21 @@ Knowing where the center of a looming stimulus was projected within the tectum, 
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig3.pdf}
 \caption{
-Spatiotemporal organization of responses. \textbf{A}. Two first components (Principal Component Analysis with promax rotation) identified in tectal responses in a typical experiment.  \textbf{B}. Neurons from the same sample experiment as in A, shown as they were located in the tectum, and colored by the contribution of early (green) and late (purple) response components. Black cross shows the estimated position of the retinotopy center. \textbf{C}. Average change of Flash-Looming selectivity with distance from the retinotopy center, for stage 46 (left) and stage 49 (right) tadpoles; uncertainty bars show 95\% confidence intervals. \textbf{D}. Adjusted correlation matrix for instantaneous activation of different neurons across all stimuli in a sample experiment (same as in B). \textbf{E}. Ensembles identified from the correlation matrix. \textbf{F}. The number of ensembles, identified in younger and older tadpoles. \textbf{G}. Maximal modularity of ensemble partition. \textbf{H}. Ensemble spatial compactness.}
+Spatiotemporal organization of responses. \textbf{A}. Two first components (Principal Component Analysis with promax rotation) identified in tectal responses in a typical experiment.  \textbf{B}. Neurons from the same sample experiment as in A, shown as they were located in the tectum, and colored by the contribution of early (green) and late (purple) response components. Black cross shows the estimated position of the retinotopy center. \textbf{C}. Average change of Flash-Looming selectivity with distance from the retinotopy center, for stage 46 (left) and stage 49 (right) tadpoles; uncertainty bars show 95\% confidence intervals. \textbf{D}. Adjusted correlation matrix for instantaneous activation of different neurons across all stimuli in a sample experiment (same as in B). \textbf{E}. Ensembles identified from the correlation matrix. \textbf{F}. The number of ensembles, identified in younger and older tadpoles. \textbf{G}. Maximal modularity of ensemble partition. \textbf{H}. Spatial compactness of ensembles.}
 \end{figure*}
 
 \subsection*{Neuronal ensembles}
 
-We then asked whether certain tectal cells tended to respond or stay silent together, potentially indicating distributed processing in network ensembles \citep{orger2016review}. As a simplistic way to assess that, we performed factor analysis of trial-to-trial \textbf{population response variability}, and checked whether its results changed in development, as it happens for tectal spontaneous activity \citep{xu2011}. The total number of principle components needed to describe 80\% of variance across cells \citep{avitan2017spontaneous} was similar in stage 46 and 49 tadpoles (51$\pm$14 and 65$\pm$28, $p_t$=0.1 for looming; 49$\pm$12 and 62$\pm$32, $p_t$=0.2 for flashes; 51$\pm$14 and 64$\pm$26, $p_t$=0.1 for scrambled).
+We then asked whether certain tectal cells tended to respond or stay silent together, potentially indicating distributed processing in network ensembles \citep{orger2016review}. As a simplistic way to assess that, we performed factor analysis of trial-to-trial \textbf{population response variability}, and checked whether its results changed in development, as it happens for tectal spontaneous activity \citep{xu2011}. The total number of principle components needed to describe 80\% of variance across cells \citep{avitan2017spontaneous} was similar in stage 46 and 49 tadpoles (51$\pm$14 and 65$\pm$28, $p_t=$ 0.1 for looming; 49$\pm$12 and 62$\pm$32, $p_t=$ 0.2 for flashes; 51$\pm$14 and 64$\pm$26, $p_t=$ 0.1 for scrambled).
 
-To better describe and visualize network activation variability, we looked for \textbf{ensembles} of tectal cells using spectral clustering \citep{thompson2016ensembles}. Unlike for spontaneous activity, we could not easily aggregate activity states into clusters \citep{avitan2017spontaneous}, as activation in our networks was driven by shared sensory inputs. Instead, we subtracted average responses of each cell from its responses in individual trials, and calculated pairwise correlations on the remaining “anomalies” of trial-by-trial activation (Figure 3D). We turned these correlations into pairwise distances in a multidimensional space, ran a series of spectral clustering partitions \citep{ng2002spectral}, and of all possible partitions, picked the one that maximized spectral modularity on a similarity graph \citep{newman2006modularity, gomez2009community} (Figure 3E; see Methods for details). We found that the number of ensembles did not differ between younger and older tadpoles (Figure 3F; 10$\pm$5 in stage 45, 11$\pm$11 in stage 49; $p_t$=0.9), although in older tadpoles, ensembles were more coordinated with each other,  producing lower values of network modularity (Figure 3G; 0.14$\pm$0.05 to 0.09$\pm$0.06, $p_t$=0.03). Tectal ensembles also tended to be spatially localized (Figure 3H), with cells within each ensemble located closer to each other on average than to cells from different ensembles, both in younger (29$\pm$9\% closer) and older animals (25$\pm$10\% closer; no difference in development $p_t$=0.3).
+To better describe and visualize network activation variability, we looked for \textbf{ensembles} of tectal cells using spectral clustering \citep{thompson2016ensembles}. Unlike for spontaneous activity, we could not easily aggregate activity states into clusters \citep{avitan2017spontaneous}, as activation in our networks was driven by shared sensory inputs. Instead, we subtracted average responses of each cell from its responses in individual trials, and calculated pairwise correlations on the remaining “anomalies” of trial-by-trial activation (Figure 3D). We turned these correlations into pairwise distances in a multidimensional space, ran a series of spectral clustering partitions \citep{ng2002spectral}, and of all possible partitions, picked the one that maximized spectral modularity on a similarity graph \citep{newman2006modularity, gomez2009community} (Figure 3E; see Methods for details). We found that the number of ensembles did not differ between younger and older tadpoles (Figure 3F; 10$\pm$5 in stage 45, 11$\pm$11 in stage 49; $p_t=$ 0.9), although in older tadpoles, ensembles were more coordinated with each other,  producing lower values of network modularity (Figure 3G; 0.14$\pm$0.05 to 0.09$\pm$0.06, $p_t=$ 0.03). Tectal ensembles also tended to be spatially localized (Figure 3H), with cells within each ensemble located closer to each other on average than to cells from different ensembles, both in younger (29$\pm$9\% closer) and older animals (25$\pm$10\% closer; no difference in development $p_t=$ 0.3).
 
 \subsection*{Network reconstruction}
 
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig4.pdf}
 \caption{
-Connectivity reconstruction.  \textbf{A}. Delayed correlations between activities of different neurons in a sample experiment. \textbf{B}. Adjusted transfer entropy estimations for the same experiment. \textbf{C}. Estimated weighted adjacency matrix. \textbf{D}. Connectivity reconstruction, with location of each cell preserved. Node color indicates its selectivity. \textbf{E}. Same graph as in D, in visually optimized layout. Positions of individual nodes no longer represent the position of tectal cells. \textbf{F}. In-degree distribution for younger (violet) and older (black) tadpoles, presented in log-scale, with uncertainty bars showing 95\% confidence intervals. Observable changes for individual degrees ($p_t<$ 0.05) are marked with asterisks. \textbf{G}. Same as C, but for out-degree distributions. \textbf{H}. Network power $\gamma$ increased in development, as older tadpoles had a slightly sharper slope to their degree distributions. }
+Connectivity reconstruction.  \textbf{A}. Delayed correlations between activities of different neurons in a sample experiment. \textbf{B}. Adjusted transfer entropy estimations for the same experiment. \textbf{C}. Estimated weighted adjacency matrix. \textbf{D}. Connectivity reconstruction, with location of each cell preserved. Node color indicates its selectivity. \textbf{E}. Same graph as in D, in visually optimized layout. Positions of individual nodes no longer represent the position of tectal cells. \textbf{F}. In-degree distribution for younger (violet) and older (black) tadpoles, presented in log-scale, with uncertainty bars showing 95\% confidence intervals. Discernible changes for individual degrees ($p_t<$ 0.05) are marked with asterisks. \textbf{G}. Same as C, but for out-degree distributions. \textbf{H}. Network power $\gamma$ increased in development, as older tadpoles had a slightly sharper slope to their degree distributions. }
 \end{figure*}
 
 The high speed of imaging used in this study (84 frames/s) allowed us to look not just at instantaneous correlations between activation of individual neurons, but at the \textit{propagation} of signals through the network. To reconstruct network connectivity, we calculated pairwise transfer entropy \citep{gourevitch2007te, stetter2012te} between activity traces of individual cells. Intuitively, for each pair of neurons $i$ and $j$ we quantified the amount of additional information that past activity of neuron $i$ could offer to predict current activity of neuron $j$. This is conceptually similar to calculating a cross-correlation between the activity of neuron $i$ at each frame $t$, and the activity of neuron $j$ at each consecutive frame $t+1$ (Figure 4A), except that transfer entropy calculation (Figure 4B) does not make assumptions about the type of influences neuron $i$ may have over neuron $j$, and offers a lower inference noise \citep{stetter2012te}.
@@ -193,7 +193,7 @@ An unusual feature of our high-speed imaging protocol, compared to more common t
 
 A known prediction for networks dominated by spike-time-dependent plasticity (STDP) is that with time, neuronal connections tend to become highly asymmetric \citep{pratt2008recurrent, richards2010stdp}. Indeed, if cells $i$ and $j$ are reciprocally connected, every time $j$ spikes after $i$, STDP would increase the weight $w_{ji}$ (for a connection leading from $i$ to $j$), but decrease the reciprocal weight $w_{ij}$ \citep{abbott1996ltpsequence, fiete2010chains}. We found that for our data, \textbf{the share of bidirectional edges} (those with both $w_{ij}$ and $w_{ji}>$0) among all detected edges was smaller (0.3$\pm$0.3\%) than expected for random edge assignment in graphs of our size (0.4$\pm$0.1\%, paired $p_t=$ 0.02), indicating an asymmetric information flow in the tectum. Moreover, the share of bidirectional edges decreased in development, from 0.4$\pm$0.3\% in younger animals to 0.2$\pm$0.2\% in older animals ($p_t=$ 0.03), suggesting that STDP was still shaping emerging network topology at these developmental stages.
 
-We then looked at whether connected cells were more likely to be located spatially closer to each other. We found that the \textbf{average distance between connected cells} was indeed shorter than for randomly selected cells (18$\pm$10\% shorter for stage 45, and 17$\pm$8\% shorter for stage 49 tadpoles; connected neurons were closer to each other with $p_t<$0.05 in 13/14 and 16/16 individual experiments respectively). In contrast to visual inputs to the tectum \citep{tao2005refinement}, the intra-tectal connectivity did not become more compact in development ($p_t$=0.7). This may suggest that tectal networks rely on relatively far-reaching recurrent connections to integrate visual information across the visual field \citep{baginskas2009recurrent, liu2016jumbo, jang2016}.
+We then looked at whether connected cells were more likely to be located spatially closer to each other. We found that the \textbf{average distance between connected cells} was indeed shorter than for randomly selected cells (18$\pm$10\% shorter for stage 45, and 17$\pm$8\% shorter for stage 49 tadpoles; connected neurons were closer to each other with $p_t<$ 0.05 in 13/14 and 16/16 individual experiments respectively). In contrast to visual inputs to the tectum \citep{tao2005refinement}, the intra-tectal connectivity did not become more compact in development ($p_t=$ 0.7). This may suggest that tectal networks rely on relatively far-reaching recurrent connections to integrate visual information across the visual field \citep{baginskas2009recurrent, liu2016jumbo, jang2016}.
 
 \subsection*{Network properties}
 
@@ -207,7 +207,7 @@ Global network properties. Filled markers show values from experiments; empty ma
 
 The measure of average "connectedness" in the graph, known as \textbf{network efficiency}, quantifies the length of the average shortest path connecting two random nodes in the network \citep{latora2001efficiency, rubinov2010toolbox}. This value is high when short paths made of high-weight edges tend to connect any two randomly chosen nodes in the graph, making it easy for signals to propagate within the network; the value is low when some pairs of nodes are far from each other on a graph (Figure 5A). We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was lower than expected for a randomized network with a matching degree distribution ($d=-$0.3, paired $p_t=$ 0.04 and $d=-$0.3, paired $p_t=$ 0.06 for younger and older tadpoles respectively). It was not clear whether efficiency changed with age ($d=-$0.8, $p_t=$ 0.06).
 
-The \textbf{global clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes being a part a triangle with a third node connected to both of them (Figure 5B). The value of clustering coefficient in our networks was very small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but slightly larger than expected in a randomly rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals). This means that neurons with more than two connections were likely to form clusters. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
+The \textbf{global clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes being a part a triangle with a third node connected to both of them (Figure 5B). The value of clustering coefficient in our networks was very small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but slightly larger than expected in a randomly rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals). This means that neurons with more than two connections were likely to form clusters. There was no change in clustering in development ($d=-$0.4, $p_t=$ 0.3, Fig.).
 
 Network \textbf{modularity} is the most commonly used measure of mesoscale network heterogeneity \citep{newman2006modularity, leicht2008community}. A network with high modularity can be split into a set of sub-networks, with higher density of connections within each sub-network, and weaker connections between them (Figure 5C). In our experiments, reconstructed tectal networks had similar, or slightly higher modularity, compared to matching randomly rewired networks ($d=$ 0.2 and 0.3, paired $p_t=$ 0.2 and 0.06, for stages 46 and 49 respectively), and network modularity clearly increased in development ($d=$ 1.0, $p_t =$ 0.01).
 
@@ -261,11 +261,11 @@ The \textbf{summary of modeling results} is shown in Figure 8 (black line in eac
 
 We then analyzed the quality of \textbf{stimulus encoding}, or whether stimulus identity could be reconstructed from the total activation of every cell in the network, similar to how we did it for biological experiments. For a dataset consisting of equal shares of looming and non-looming stimuli, stimulus encoding increased in development, and reached prediction accuracy of $\sim$95\% (Figure 8E). The fact that with multivariate logistic regression we could identify looming stimuli so well suggests that a retinotopic STDP-driven network can achieve reliable looming detection, as long as it is equipped with a properly tuned output layer. We assume that in biological tadpoles, this output layer is represented by the projections from the tectum to the reticulospinal neurons in the hindbrain \citep{helmbrecht2018topography}, with weights of these projections tuned in development via reinforcement learning.
 
-Unlike for biological experiments, the model was selective for \textbf{looming over scrambled stimuli} at the full network level (Figure 8F): by the end of the training, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells was 0.48$\pm$0.07 (Figure 8G); and 84\% of cells were selective for looming stimuli (Figure 8H), which was also different from what we observed in real animals. Across cells within each network, looming-over-flash selectivity only weakly correlated with scrambled-over-flash selectivity ($r$= 0.17$\pm$0.10), which was unlike high correlation (r$\sim$0.8) observed in imaging experiments. On the contrary, looming-over-flash selectivity strongly correlated with looming-over-scramble selectivity in the model ($r$=0.91$\pm$0.02), while it was not present in imaging experiments (to r$\sim$0.03). This suggests that while in the biological tectum selectivity was strongly influenced by activation dynamics, in the model it was largely driven by the stimulus geometry. A subset of highly selective cells did not emerge in the model, and the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Figure 8I).
+Unlike for biological experiments, the model was selective for \textbf{looming over scrambled stimuli} at the full network level (Figure 8F): by the end of the training, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells was 0.48$\pm$0.07 (Figure 8G); and 84\% of cells were selective for looming stimuli (Figure 8H), which was also different from what we observed in real animals. Across cells within each network, looming-over-flash selectivity only weakly correlated with scrambled-over-flash selectivity ($r=$ 0.17$\pm$0.10), which was unlike high correlation (r$\sim$ 0.8) observed in imaging experiments. On the contrary, looming-over-flash selectivity strongly correlated with looming-over-scramble selectivity in the model ($r=$ 0.91$\pm$0.02), while it was not present in imaging experiments (to r$\sim$0.03). This suggests that while in the biological tectum selectivity was strongly influenced by activation dynamics, in the model it was largely driven by the stimulus geometry. A subset of highly selective cells did not emerge in the model, and the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Figure 8I).
 
-The \textbf{position of selective cells} within the visual field was different in the model compared to biological experiments. While in tadpoles selective cells tended to sit in the middle of the retinotopic field, in the model they tended to be on the periphery, and selectivity for looming stimuli positively (rather than negatively as in calcium imaging experiments) correlated with the distance from the network center (Figure 8J). Similar to tadpoles, however, this correlation decreased in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Similarly to biological networks, selective cells tended to be closer to each other (down to 71$\pm$3\% of distance expected for random connections; Figure 8K), yet unlike for biological networks, this locality of connections was refined in development.
+The \textbf{position of selective cells} within the visual field was different in the model compared to biological experiments. While in tadpoles selective cells tended to sit in the middle of the retinotopic field, in the model they tended to be on the periphery, and selectivity for looming stimuli positively (rather than negatively as in calcium imaging experiments) correlated with the distance from the network center (Figure 8J). Similar to tadpoles, however, this correlation decreased in development (from $r\sim$ 0.75 in a naive network, to $r\sim$ 0.25 in a trained network). Similarly to biological networks, selective cells tended to be closer to each other (down to 71$\pm$3\% of distance expected for random connections; Figure 8K), yet unlike for biological networks, this locality of connections was refined in development.
 
-We then looked at topological and functional correlates of looming selectivity in model networks (\textbf{centrality measures}). Selective cells tended to be more spiky ($r$=0.34$\pm$0.12; Figure 8L), and usually were not a part of a cluster (Figure 8M; final correlation with local clustering coefficient $r$=$-$0.26$\pm$0.12). Unlike in biological networks, in the base model (red line) selective sells did not have higher Katz centrality ($r$=0.02$\pm$0.13; Figure 8N), and they did not tend to receive an unusual number of incoming connections ($r=$0.00$\pm$0.12; Figure 8O). As in biological experiments, selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07; Figure 8P). In naive networks, the majority ($\sim$85\%) of strong edges (top 50\% of edges by weight) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$\pm$0.03), matching results from biological networks.
+We then looked at topological and functional correlates of looming selectivity in model networks (\textbf{centrality measures}). Selective cells tended to be more spiky ($r=$ 0.34$\pm$0.12; Figure 8L), and usually were not a part of a cluster (Figure 8M; final correlation with local clustering coefficient $r=-$0.26$\pm$0.12). Unlike in biological networks, in the base model (red line) selective sells did not have higher Katz centrality ($r=$ 0.02$\pm$0.13; Figure 8N), and they did not tend to receive an unusual number of incoming connections ($r=$ 0.00$\pm$0.12; Figure 8O). As in biological experiments, selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07; Figure 8P). In naive networks, the majority ($\sim$85\%) of strong edges (top 50\% of edges by weight) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$\pm$0.03), matching results from biological networks.
 
 The \textbf{variability of responses} to looming stimuli over time, quantified as the number of principal components required to describe 80\% of response variability, mildly increased with network development, from 28$\pm$1 to 37$\pm$1 (Figure 8Q). The number of detected network \textbf{ensembles} did not change in development, staying around 15 (Figure 8R), but the share of variance in network responses explained by the involvement of different ensembles increased from $\sim$35\% in naive networks, to $\sim$50\% by the end of learning. As in biological networks, cells that formed an ensemble were slightly (by ca. 20\%) more likely to be connected to each other, and were about 40\% closer to each other than any two random cells in the network.
 
